Bug 156251 - SVG: space between text and tspan not added
Summary: SVG: space between text and tspan not added
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.5.6 target:7.6...
Keywords: bibisected, bisected, filter:svg, regression
Depends on: 156269
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-07-12 11:24 UTC by Xisco Faulí
Modified: 2023-07-14 10:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (236 bytes, image/svg+xml)
2023-07-12 11:24 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-07-12 11:24:05 UTC
Created attachment 188329 [details]
sample file

Steps to reproduce:
1. Open attached document

-> no spaces around 'not'

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 663db89378aa1f0425e795ef5d471f134e658dc4
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-07-12 11:24:42 UTC
Regression introduced by

author	Xisco Fauli <xiscofauli@libreoffice.org>	2022-09-21 17:25:17 +0200
committer	Xisco Fauli <xiscofauli@libreoffice.org>	2022-09-21 21:04:40 +0200
commit a42f5faac7c6d4590e632cf40e3ba9eb618e6f56 (patch)
tree 6f59bb79a87930d51797101669afe9b442a86ccf
parent 5468a58c3244cf98341945c17db040b067c825f7 (diff)
tdf#103888: Do not add a gap at the end of each text portion

Bisected with bibisect-linux64-7.5
Comment 2 stragu 2023-07-12 16:31:14 UTC
Confirmed it wasn't in 7.3, but I see it in 7.4.3.
Comment 3 Commit Notification 2023-07-12 20:12:05 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5079e7937ef471a44dcf119dc6ae0a334d9c6adc

tdf#156251: Add gap between text elements when needed

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-07-13 10:03:11 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f0e825382a76d685998be702ed551a00b73476a5

tdf#156251: Add gap between text elements when needed

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2023-07-14 10:08:11 UTC
Verified on own build of master from today.Thanks!
Comment 6 Commit Notification 2023-07-14 10:10:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e4448cbb807144959ec83576c2b8f6f696864b76

tdf#156251: Add gap between text elements when needed

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.