tdf#156251: Add gap between text elements when needed

Partially revert a42f5faac7c6d4590e632cf40e3ba9eb618e6f56
"tdf#103888: Do not add a gap at the end of each text portion"
and adapt code to keep tdf#103888 fixed

Change-Id: I4b3f1ff7d87b1945233d9b05824d58af1e001d65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154364
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 5079e7937ef471a44dcf119dc6ae0a334d9c6adc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154327
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>